# studying_code

./: README.md  manage.py  pyproject.toml
controller/: base_controller.py  product_pet_controller.py
crud_product_pet/: asgi.py  settings.py  urls.py  wsgi.py
dao/: base_dao.py  product_pet_dao.py  session.py
models/: products_pet_model.py
product_pet/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
product_pet/migrations/: 0001_initial.py  0002_auto_20210217_2227.py
resources/: base_resource.py  product_pet_resource.py
view_api/: api_flask.py
