[tool.poetry]
name = "studying_code"
version = "0.1.0"
description = ""
authors = ["Gustavo Sobreiro de Assis <gustavo.sobreiro@olist.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
